Fixed textoverflow

--- a/prabal.css
+++ b/prabal.css
@@ -55,12 +55,11 @@ a.navb:hover{
 .background1{
   background: rgba(0,0,0,0.7) url('Images/background.jpg');
   background-size: cover;
-  width: 100vw;
-  height: 100vh;
+
 }
 
 #home{
-  height: 100vh;
+  
 }
 
 #greet{
@@ -99,6 +98,8 @@ a.navb:hover{
 
 #a3{
   animation: fade-in 3s ease-in-out 7s 1 forwards;
+  margin: 0%;
+  padding: 0% 0% 17.7% 0%;
 }
 
 @keyframes fade-in {
@@ -113,13 +114,10 @@ a.navb:hover{
 .background2{
   background: rgba(0,0,0,0.7) url('Images/abtbckg.jpg');
   background-size: cover;
-  width: 100vw;
-  height: 80vh;
 }
 
 #about{
   display: flex;
-  height: 80vh;
 }
 
 #prpic{
@@ -151,12 +149,10 @@ a.navb:hover{
 .background3{
   background: rgba(0,0,0,0.7) url('Images/edubckg.jpg');
   background-size: cover;
-  width: 100vw;
-  height: 94vh;
 }
 
 #edu{
-  height: 94vh;
+
 }
 
 #head{
@@ -185,12 +181,10 @@ a.navb:hover{
 .background4{
   background: rgba(0,0,0,0.7) url('Images/skbckg.jpg');
   background-size: cover;
-  width: 100vw;
-  height: 60vh;
 }
 
 #skill{
-  height: 60vh;
+  
 }
 
 .skhd{
@@ -211,7 +205,7 @@ a.navb:hover{
 }
 
 #contact{
-  height: 50vh;
+
 }
 
 #cnthd{
@@ -252,8 +246,6 @@ a.navb:hover{
 .background5{
   background: rgba(0,0,0,0.7) url('Images/cntbck.jpg');
   background-size: cover;
-  width: 100vw;
-  height: 50vh;
 }
 
 .fa {
